Implemented linked list.

--- a/c-data-structures.vcxproj.filters
+++ b/c-data-structures.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="src\color.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\linked.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\list.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\color.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\linked.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
