--- a/c-data-structures.vcxproj
+++ b/c-data-structures.vcxproj
@@ -20,11 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\color.c" />
+    <ClCompile Include="src\linked.c" />
     <ClCompile Include="src\list.c" />
     <ClCompile Include="src\test.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\color.h" />
+    <ClInclude Include="src\linked.h" />
     <ClInclude Include="src\list.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
