--- a/c-data-structures.vcxproj
+++ b/c-data-structures.vcxproj
@@ -20,14 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\color.c" />
-    <ClCompile Include="src\linked.c" />
-    <ClCompile Include="src\list.c" />
+    <ClCompile Include="src\lklist.c" />
+    <ClCompile Include="src\arlist.c" />
     <ClCompile Include="src\test.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\color.h" />
-    <ClInclude Include="src\linked.h" />
-    <ClInclude Include="src\list.h" />
+    <ClInclude Include="src\lklist.h" />
+    <ClInclude Include="src\arlist.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
