--- a/c-data-structures.vcxproj
+++ b/c-data-structures.vcxproj
@@ -22,12 +22,14 @@
     <ClCompile Include="src\color.c" />
     <ClCompile Include="src\lklist.c" />
     <ClCompile Include="src\arlist.c" />
+    <ClCompile Include="src\singleton.c" />
     <ClCompile Include="src\test.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\color.h" />
     <ClInclude Include="src\lklist.h" />
     <ClInclude Include="src\arlist.h" />
+    <ClInclude Include="src\singleton.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
